Resolved x-overflow issue on mobile devices

--- a/css/base.css
+++ b/css/base.css
@@ -547,7 +547,6 @@ input[type="password"], textarea {
 
 @media only screen and (max-width: 600px) {
     .row {
-        width: auto;
         padding-left: 25px;
         padding-right: 25px;
     }
